# brainfxxk

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
src/: brainfxxk.c  brainfxxk.h  log.c  log.h  main.c  tape.c  tape.h
test/: t_bf.c  t_tape.c
